# TukTrak

./: CMakeLists.txt  README.md
TukTrack/: CMakeLists.txt  Main.qml  Style.qml  main.cpp  uicontroller.cpp  uicontroller.h
TukTrack/Components/: DateChooser.qml  DatePickerPopup.qml
TukTrack/Screens/: About.qml  DailyDeposits.qml  Deposits.qml  DriverDetail.qml  Drivers.qml  Home.qml  MaintenanceRecord.qml  More.qml  TukTuk.qml  TukTukDetail.qml
TukTrack/android/: AndroidManifest.xml
TukTrack/android/res/values/: styles.xml
TukTrack/android/src/iroot/tuktrack/: AndroidInterface.java  TukActivity.java
tuktrack_core/: CMakeLists.txt  androidapi.cpp  androidapi.h  corecontroller.cpp  corecontroller.h  maintenancerecordcontroller.cpp  maintenancerecordcontroller.h  tuktrack_core_global.h  utils.cpp  utils.h
tuktrack_core/data/: databaseaccessmanager.cpp  databaseaccessmanager.h  driverdeposit.cpp  driverdeposit.h  driverdepositdao.cpp  driverdepositdao.h  driverdepositsetting.cpp  driverdepositsetting.h  maintenancedao.cpp  maintenancedao.h  tukdriver.cpp  tukdriver.h  tukdriverdao.cpp  tukdriverdao.h  tukdriversetting.cpp  tukdriversetting.h  tukmaintenance.cpp  tukmaintenance.h  tuktuk.cpp  tuktuk.h  tuktukdao.cpp  tuktukdao.h
tuktrack_core/models/: dailydepositlistmodel.cpp  dailydepositlistmodel.h  dailydepositmodels.cpp  dailydepositmodels.h  dashboardmodel.cpp  dashboardmodel.h  depositdatelistmodel.cpp  depositdatelistmodel.h  detailedmaintenancelistmodel.cpp  detailedmaintenancelistmodel.h  driverdepositmodel.cpp  driverdepositmodel.h  driverdepositsettingmodel.cpp  driverdepositsettingmodel.h  driverdetailmodel.cpp  driverdetailmodel.h  driverslistmodel.cpp  driverslistmodel.h  maintenancecostbytukmodel.cpp  maintenancecostbytukmodel.h  maintenancecostbytypemodel.cpp  maintenancecostbytypemodel.h  maintenancelistmodel.cpp  maintenancelistmodel.h  maintenancetypemodel.cpp  maintenancetypemodel.h  revenuechartmodel.cpp  revenuechartmodel.h  tukdetailmodel.cpp  tukdetailmodel.h  tukdrivershiftmodel.cpp  tukdrivershiftmodel.h  tuktuklistmodel.cpp  tuktuklistmodel.h
